# aiAgentBackend

./: .gitignore  MCP_CLIENT_UPDATE.md  Makefile  README.md  REDESIGN_SUMMARY.md  chart_viewer.html  env.example  how --name-only HEAD  main.py  main_gemini.py  main_mock.py  pyproject.toml  requirements.txt  start.py  start_uv.py  test_api.py  test_chart_generation.py  test_gemini_agent.py  test_gemini_key.py  test_mcp_client_update.py  test_mcp_integration.py  test_new_design.py  test_openai.py  test_openai_key.py  test_simple_mcp.py
agents/: __init__.py  sql_agent.py  sql_agent_gemini.py  sql_agent_mock.py
examples/: api_usage.py
mcp/: __init__.py  database_client.py  database_server.py
tests/: __init__.py  test_sql_agent.py
